# noMonoliticas-proyecto

./: .gitignore  .gitpod.yml  AppsNoMoliticas.postman_collection.json  README.md  docker-compose.yml  order-requirements.txt  order.Dockerfile  pyproject.toml  warehouse-requirements.txt  warehouse.DockerFile
src/bff_web/: main.py
src/bff_web/api/v1/: consultas.py  esquemas.py  mutaciones.py
src/delivery/: Dockerfile  delivery_app.py  delivery_controller.py  producer.py  readEntrega.py  requirements.txt  schemas.py
src/order/api/: __init__.py
src/order/aplicacion/: __init__.py  dto.py  handlers.py  mapeadores.py
src/order/aplicacion/comandos/: base.py  crear_orden.py
src/order/aplicacion/queries/: base.py  obtener_ordenes.py  obtener_ordenes_sincrona.py
src/order/dominio/: entidades.py  eventos.py  excepciones.py  fabricas.py  objetos_valor.py  repositorios.py
src/order/infraestructura/: consumidores.py  despachadores.py  dto.py  excepciones.py  fabricas.py  mapeadores.py  repositories.py
src/sagas/: __init__.py  consumidores.py  util.py
src/sagas/aplicacion/: dto.py  repositories.py
src/sagas/aplicacion/coordinadores/: saga_reservas.py
src/sagas/config/: db.py
src/warehouse_ms/config/: db.py  uow.py
src/warehouse_ms/seedwork/application/: commands.py  dto.py  queries.py
src/warehouse_ms/seedwork/domain/: entities.py  events.py  exceptions.py  factories.py  mixins.py  repositories.py  rules.py  services.py  value_objects.py
src/warehouse_ms/seedwork/infrastructure/: projections.py  uow.py  utils.py  views.py
(+24 files in other folders)
